# inboxapi-cli

./: .gitignore  AGENTS.md  CLAUDE.md  CNAME  Cargo.toml  GEMINI.md  LICENSE  README.md  index.js  package-lock.json  package.json
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
claude/hooks/: credential-check.js  email-activity-logger.js  email-send-guard.js
claude/skills/check-inbox/: SKILL.md
claude/skills/compose/: SKILL.md
claude/skills/email-digest/: SKILL.md
claude/skills/email-forward/: SKILL.md
claude/skills/email-reply/: SKILL.md
claude/skills/email-search/: SKILL.md
claude/skills/setup-inboxapi/: SKILL.md
docs/: help.md
eval/: README.md  index.js  package-lock.json  package.json
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-win32-x64/: package.json
skills/claude/check-inbox/: SKILL.md
skills/claude/check-sent/: SKILL.md
skills/claude/compose/: SKILL.md
skills/claude/download-attachment/: SKILL.md
skills/claude/email-digest/: SKILL.md
skills/claude/email-forward/: SKILL.md
skills/claude/email-reply/: SKILL.md
skills/claude/email-search/: SKILL.md
skills/claude/setup-inboxapi/: SKILL.md
skills/codex/check-inbox/: SKILL.md
skills/codex/check-sent/: SKILL.md
skills/codex/compose/: SKILL.md
skills/codex/download-attachment/: SKILL.md
skills/hooks/: credential-check.js  email-activity-logger.js  email-send-guard.js
skills/opencode/: check-inbox.md  check-sent.md  compose.md  download-attachment.md  email-digest.md  email-forward.md  email-reply.md  email-search.md  setup-inboxapi.md
src/: main.rs
tests/: mcp_integration_test.rs
(+14 files in other folders)
