[package]
name = "inboxapi-cli"
version = "0.3.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sha1 = "0.10"
chrono = "0.4"
rand = "0.8"
data-encoding = "2.6"
mime_guess = "2.0"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.27.0"
